# tremotesf-android

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  REUSE.toml  build-native.sh  build.gradle  build.gradle.kts  gradle.properties  index.html  plugin_versions.gradle.kts  settings.gradle.kts
.github/workflows/: Dockerfile  build-environment.yml  compute-ccache-key.sh  get-ndk-version.sh  main.yml
.reuse/: dep5
.tx/: config
app/: .gitignore  build.gradle  build.gradle.kts  proguard-rules.pro
app/src/fdroid/: AndroidManifest.xml
app/src/google/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: elevation_overlay_color_4dp.xml  icon_color.xml  icon_color_always_night.xml  selected_background.xml
app/src/main/res/drawable/: action_mode_background.xml  drag_handle.xml  file_list_item_icon.xml  file_list_item_icon_black.xml  file_list_item_icon_white.xml  ic_add_24dp.xml  ic_add_24dp_night.xml  ic_add_black_24dp.xml  ic_android_black_24dp.xml  ic_arrow_downward_24dp.xml  ic_arrow_downward_black_24dp.xml  ic_arrow_drop_down_black_24dp.xml  ic_arrow_upward_24dp.xml  ic_arrow_upward_black_24dp.xml  ic_baseline_filter_list_24.xml  ic_baseline_filter_list_highlighted_24.xml  ic_baseline_restore_24.xml  ic_baseline_share_24.xml  ic_delete_24dp.xml  ic_done_24dp.xml  ic_done_24dp_night.xml  ic_error_24dp.xml  ic_error_black_24dp.xml  ic_fast_forward_24.xml  ic_fast_forward_disabled_24.xml  ic_fast_forward_enabled_24.xml  ic_file_download_24dp.xml  ic_find_in_page_24dp.xml  ic_find_in_page_white_24dp.xml  ic_folder_24dp.xml  ic_home_24dp.xml  ic_home_white_24dp.xml  ic_insert_drive_file_24dp.xml  ic_label_16dp.xml  ic_launcher_foreground.xml  ic_launcher_foreground_monochrome.xml  ic_pause_24dp.xml  ic_pause_black_24dp.xml  ic_pause_disabled_24dp.xml  ic_pause_enabled_24dp.xml  (+44 more)
app/src/main/res/drawable-anydpi-v21/: ic_arrow_drop_down_white_24dp.xml  notification_disconnect.xml
app/src/main/res/drawable-night/: ic_arrow_downward_24dp.xml  ic_arrow_upward_24dp.xml  ic_fast_forward_disabled_24.xml  ic_fast_forward_enabled_24.xml  ic_pause_disabled_24dp.xml  ic_priority_high_24dp.xml  sort_ascending_disabled.xml
app/src/main/res/drawable-v21/: notification_connect.xml
app/src/main/res/drawable-v23/: action_mode_background.xml
app/src/main/res/layout/: about_activity.xml  about_activity_license_fragment.xml  about_activity_pager_fragment.xml  about_fragment.xml  about_fragment_base_tab_fragment.xml  about_fragment_license_tab_fragment.xml  add_torrent_file_activity.xml  add_torrent_file_files_fragment.xml  add_torrent_file_fragment.xml  add_torrent_file_info_fragment.xml  add_torrent_file_main_fragment.xml  label_chip.xml  (+79 more)
billing/: build.gradle.kts
billing/src/main/: AndroidManifest.xml
buildSrc/: build.gradle.kts  settings.gradle.kts
common/: build.gradle.kts  consumer-rules.pro
common/src/main/: AndroidManifest.xml
fastlane/metadata/android/de-DE/: full_description.txt  short_description.txt
fastlane/metadata/android/fr/: full_description.txt  short_description.txt
fastlane/metadata/android/he/: short_description.txt
fastlane/metadata/android/hr/: short_description.txt
fastlane/metadata/android/it/: full_description.txt  short_description.txt
fastlane/metadata/android/ko-KR/: full_description.txt
fastlane/metadata/android/ko-rKR/: short_description.txt
fastlane/metadata/android/pl/: full_description.txt  short_description.txt
fastlane/metadata/android/pt/: short_description.txt
fastlane/metadata/android/pt-BR/: short_description.txt
fastlane/metadata/android/ru/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/sk/: full_description.txt
fastlane/metadata/android/tr/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
gradle/: libs.versions.toml
gradle-plugin/: build.gradle.kts  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
libtremotesf/: CMakeLists.txt  LibTremotesf.java  build.gradle.kts  build.sh  consumer-rules.pro  libtremotesf.pro  rpc.cpp  rpc.h  serversettings.cpp  serversettings.h  stdutils.h  torrent.cpp  torrent.h  tracker.cpp  tracker.h
libtremotesf/jni/: generate_bindings.sh  jnirpc.cpp  jnirpc.h  libtremotesf.i  libtremotesf_wrap.cxx  libtremotesf_wrap.h  qbytearray.i  qdatetime.i  qstring.i  qtime.i  qvariantlist.i
libtremotesf/jni/java/org/equeim/libtremotesf/: BaseRpc.java  IntVector.java  JniRpc.java  JniServerSettings.java  JniServerSettingsData.java  JniWrapper.java  Peer.java  Rpc.java  Server.java  ServerSettings.java  ServerSettingsData.java  ServerStats.java  SessionStats.java  StringMap.java  StringsVector.java  Torrent.java  TorrentData.java  TorrentDataVector.java  TorrentFile.java  TorrentFilesVector.java  TorrentPeersVector.java  TorrentsVector.java  Tracker.java  TrackersVector.java  libtremotesf.java  libtremotesfJNI.java
libtremotesf/src/main/: AndroidManifest.xml
libtremotesf/src/main/cpp/: CMakeLists.txt  generate_bindings.sh  isrg_root_x1.pem.license  javacpputils.h  jnirpc.cpp  jnirpc.h  libtremotesf.i  libtremotesf_wrap.cxx  libtremotesf_wrap.h  qbytearray.i  qdatetime.i  qstring.i  qtime.i  resources.qrc
libtremotesf/src/main/java/org/equeim/libtremotesf/: ConnectionConfiguration.java  IntPair.java  IntPairVector.java  IntVector.java  JniRpc.java  JniServerSettingsData.java  LibTremotesf.java  LibTremotesfLoader.java  Peer.java  Rpc.java  RpcConnectionState.java  RpcError.java  Server.java  ServerSettingsData.java  SessionStats.java  StringMap.java  StringsVector.java  TorrentData.java  TorrentDataVector.java  TorrentFile.java  TorrentFilesVector.java  TorrentPeersVector.java  Tracker.java  TrackersVector.java  libtremotesf.java  libtremotesfJNI.java
libtremotesf/src/main/java/org/equeim/libtremotesf/javacpp/: LibTremotesfConfig.java
openssl/: build.sh
rpc/: build.gradle.kts  consumer-rules.pro
rpc/src/main/: AndroidManifest.xml
torrentfile/: build.gradle.kts  consumer-rules.pro
torrentfile/src/main/: AndroidManifest.xml
(+571 files in other folders)
